syntax = "proto3";

package store.customer.api;

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

message Customer {
  string customer_id = 1 [(kalix.field).entity_key = true];
  string email = 2;
  string name = 3;
  Address address = 4;
}

message Address {
  string street = 1;
  string city = 2;
}

message GetCustomer {
  string customer_id = 1 [(kalix.field).entity_key = true];
}

service Customers {
  option (kalix.codegen) = {
    value_entity: {
      name: "store.customer.domain.CustomerValueEntity"
      entity_type: "customers"
      state: "store.customer.domain.CustomerState"
    }
  };

  rpc Create(Customer) returns (google.protobuf.Empty);
  rpc Get(GetCustomer) returns (Customer);
}
